--- a/css/typography.css
+++ b/css/typography.css
@@ -2,11 +2,50 @@
     font-size: 3rem;
 }
 
-.players{
+.num-players{
     list-style: none;
     margin: 10px;
     cursor: pointer;
 }
-.players:hover{
+button{
+    background-color: white;
+    border: none;
+    cursor: pointer;
+}
+button:hover{
     text-decoration: underline;
 }
+/*player 1*/
+.Number1{
+    font-size: 2rem;
+    background-color: white;
+}
+.p1{
+    background-color: lightblue;
+}
+/*player 2*/
+.Number2{
+    font-size: 2rem;
+    background-color: white;
+}
+.p2{
+    background-color: lightblue;
+}
+/*player 3*/
+.Number3{
+    font-size: 2rem;
+    background-color: white;
+}
+.p3{
+    background-color: lightblue;
+}
+/*player 4*/
+.Number4{
+    font-size: 2rem;
+    background-color: white;
+}
+.p4{
+    background-color: lightblue;
+}
+
+
