--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,14 @@ header{
     flex-wrap: wrap;
 }
 /*player 1*/
-.p1-card{
+#p1-card,#p1-2-card{
     max-width: 400px;
     padding: 5px;
     margin: auto;
     flex-wrap: wrap;
     justify-content: space-between;
+    display: flex;
+    justify-content: center;
 }
 .Number1{
     width: calc(100%/5 - 10px);
@@ -43,12 +45,14 @@ header{
     margin-bottom: 5px;
 }
 /*player 2*/
-.p2-card{
+#p2-card{
     max-width: 400px;
     padding: 5px;
     margin: auto;
     flex-wrap: wrap;
     justify-content: space-between;
+    display: flex;
+    justify-content: center;
 }
 .Number2{
     width: calc(100%/5 - 10px);
@@ -62,6 +66,8 @@ header{
     margin: auto;
     flex-wrap: wrap;
     justify-content: space-between;
+    display: flex;
+    justify-content: center;
 }
 .Number3{
     width: calc(100%/5 - 10px);
@@ -75,6 +81,8 @@ header{
     margin: auto;
     flex-wrap: wrap;
     justify-content: space-between;
+    display: flex;
+    justify-content: center;
 }
 .Number4{
     width: calc(100%/5 - 10px);
