--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 .container{
     max-width: 1100px;
@@ -37,12 +38,12 @@ header{
     flex-wrap: wrap;
     justify-content: space-between;
     display: flex;
-    justify-content: center;
 }
-.Number1{
+.Number1,.Number2,.Number3,.Number4{
     width: calc(100%/5 - 10px);
     padding: 5px;
     margin-bottom: 5px;
+    border-radius: 5px;
 }
 /*player 2*/
 #p2-card,#p2-3-card,#p2-4-card{
@@ -52,12 +53,7 @@ header{
     flex-wrap: wrap;
     justify-content: space-between;
     display: flex;
-    justify-content: center;
-}
-.Number2{
-    width: calc(100%/5 - 10px);
-    padding: 5px;
-    margin-bottom: 5px;
+    
 }
 /*player 3*/
 #p3-card,#p3-4-card{
@@ -67,12 +63,7 @@ header{
     flex-wrap: wrap;
     justify-content: space-between;
     display: flex;
-    justify-content: center;
-}
-.Number3{
-    width: calc(100%/5 - 10px);
-    padding: 5px;
-    margin-bottom: 5px;
+  
 }
 /*player 4*/
 #p4-card{
@@ -82,15 +73,11 @@ header{
     flex-wrap: wrap;
     justify-content: space-between;
     display: flex;
-    justify-content: center;
-}
-.Number4{
-    width: calc(100%/5 - 10px);
-    padding: 5px;
-    margin-bottom: 5px;
+    
 }
 .p1,.p2,.p3,.p4{
     margin-bottom: 30px;
+    border-radius: 10px;
 }
 #num-table{
     max-width: 700px;
