controllo dati e assegnazione vincitore sistemato

--- a/css/typography.css
+++ b/css/typography.css
@@ -78,3 +78,9 @@ button:hover{
 #play2:hover{
     color:blueviolet;
 }
+#play3:hover{
+    color: darkgreen;
+}
+#play4:hover{
+    color:darkkhaki;
+}
