--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ header{
     padding: 5px;
     padding-bottom: 0px;
     margin-bottom: 20px;
+    border-radius: 5px;
 }
 .cpu-number{
     width: calc(100%/10 - 5px);
@@ -95,6 +96,7 @@ header{
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
+    border-radius: 5px;
 }
 #cpu{
     display: none;
