--- a/css/typography.css
+++ b/css/typography.css
@@ -11,7 +11,7 @@
     cursor: pointer;
 }
 button{
-    background-color: white;
+    background-color: transparent;
     border: none;
     cursor: pointer;
 }
